tests/baselines/reference/asyncSetter_es6(strict=true).errors.txt
asyncSetter_es6.ts(2,3): error TS1042: 'async' modifier cannot be used here.
asyncSetter_es6.ts(2,13): error TS7032: Property 'foo' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
asyncSetter_es6.ts(2,17): error TS7006: Parameter 'value' implicitly has an 'any' type.


==== asyncSetter_es6.ts (3 errors) ====
    class C {
      async set foo(value) {
      ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
                ~~~
!!! error TS7032: Property 'foo' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                    ~~~~~
!!! error TS7006: Parameter 'value' implicitly has an 'any' type.
      }
    }